background: Load background async
While pixbuf creation is async the actual g_file_read()
in load_background
load isn't. This should speed up startup.
Noticed while looking at !673 (merged)
Edited by Administrator
While pixbuf creation is async the actual g_file_read()
in load_background
load isn't. This should speed up startup.
Noticed while looking at !673 (merged)